moar sigma algebra

--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,12 @@
 \def\E{{\mathbb E}}
 \def\Q{\mathbb{Q}}
 \def\ind{{\mathbb I}}
+
+\def\calA{{\mathcal A}}
+\def\calB{{\mathcal B}}
+\def\calE{{\mathcal E}}
 \def\calM{{\mathcal M}}
+\def\calN{{\mathcal N}}
 \def\calP{{\mathcal P}}
 
 \theoremstyle{plain}
